<resources>
    <string name="app_name">Lista de Compras</string>

    <!--  Item screen start  -->
    <string name="item_product_price">R$ 1,88</string>
    <string name="item_product_quantity">1 x</string>
    <string name="item_product_name">Arroz</string>
    <string name="item_description_delete">Apagar</string>
    <!--  Item screen end  -->

    <!--  Home screen start  -->
    <string name="home_price_total_purchase">Total: R$ 100,00</string>
    <string name="home_description_add">Adicionar</string>
    <string name="home_total_price">Total: R$ %1$s</string>
    <string name="home_delete_all">Apagar tudo</string>
    <!--  Home screen end  -->

    <!--  Insert screen start  -->
    <string name="insert_add_item_car">Adicionar item no carrrinho</string>
    <string name="insert_product">Produto</string>
    <string name="insert_quantity">Quantidade</string>
    <string name="insert_price">Preço</string>
    <string name="insert_cancel">Cancelar</string>
    <string name="insert_save">Salvar</string>
    <string name="insert_empty_name_field_warning">Campo nome vazio</string>
    <string name="insert_empty_quantity_field_warning">Campo quantidade vazio</string>
    <string name="insert_empty_price_field_warning">Campo preço vazio</string>
    <string name="insert_notice_saved">Produto salvo</string>
    <!--  Insert screen end  -->

    <!--  Update screen start  -->
    <string name="update_add_item_car">Adicionar item no carrrinho</string>
    <string name="update_product">Produto</string>
    <string name="update_quantity">Quantidade</string>
    <string name="update_price">Preço</string>
    <string name="update_cancel">Cancelar</string>
    <string name="update_save">Salvar</string>
    <string name="update_empty_name_field_warning">Campo nome vazio</string>
    <string name="update_empty_quantity_field_warning">Campo quantidade vazio</string>
    <string name="update_empty_price_field_warning">Campo preço vazio</string>
    <string name="update_notice_saved">Produto salvo</string>
    <!--  Update screen end  -->

    <!--  Popup menu start  -->
    <string name="menu_delete_purchase">Apagar</string>
    <string name="menu_update_purchase">Editar</string>
    <!--  Popup menu end  -->

    <!--  Base Content -->
    <string name="product_name">Produto</string>
    <string name="product_amount">Quantidade</string>
    <string name="product_price">Preço</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <!-- Base Content -->

    <!--  Insert Purchase  -->
    <string name="add_item_to_cart">Adicionar item no carrinho</string>
    <string name="purchase_list_title">Lista de Compras</string>
    <!--  Insert Purchase  -->

    <!-- Home Content   -->
    <string name="delete_everything">Apagar tudo</string>
    <string name="display_total_purchase_value">Total: R$ %1$s</string>
    <string name="item_deleted_successfully">Item excluído com sucesso</string>
    <string name="add_new_purchase">Adiciona Nova Compra</string>
    <!-- Home Content  -->

    <!-- UI Test  -->
    <string name="tag_test_button_delete">button_delete</string>
    <string name="tag_test_list">purchase_list</string>
    <string name="tag_test_tag_text_total">Test Tag Text Total</string>
    <string name="tag_test_button_add">button_add</string>
    <string name="tag_test_product_name_field">product_name</string>
    <string name="tag_test_product_amount_field">product_amount</string>
    <string name="tag_test_product_price_field">product_price</string>
    <string name="tag_test_button_save">button_save</string>
    <!-- UI Test  -->

    <!-- Swipe Item  -->
    <string name="description_delete">Deletar</string>
    <string name="description_edit">Editar</string>
    <!--  Swipe Item  -->

</resources>