<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_item_cardView_margin"
    app:cardCornerRadius="@dimen/default_item_cardView_cardCornerRadius"
    app:cardElevation="@dimen/default_item_cardView_cardElevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/default_item_constraintLayout_marginHorizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_name"
            style="@style/DefaultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_product_name" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="0dp"
            style="@style/DefaultTextView"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_price"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_product_quantity" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="0dp"
            style="@style/DefaultTextView"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_more_purchase"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_product_price" />

        <ImageView
            android:id="@+id/item_more_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_description_delete"
            android:src="@drawable/ic_more_vert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>